--- a/public/chat.html
+++ b/public/chat.html
@@ -69,7 +69,7 @@
     <script id="stream-template" type="text/html">
       <li class="stream-list" >
 	<p><b>{{username}}</b></p>
-        <video width="350" height="350" id={{id}} src={{url}}  autoplay></video>
+        <video width="350" height="350" id={{id}} src={{url}}></video>
       </li>
     </script>
 
