Added webcam and microphone toggle functionality

--- a/public/chat.html
+++ b/public/chat.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
+    <button id="toggle-audio">Mute Microphone</button>
+    <button id="toggle-video">Disable Webcam</button>
     <div class="chat">
       <div id="sidebar" class="chat__sidebar">
         
